// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`image > render simple correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with formats correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <source type="image/webp"><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55/-/format/jpg" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with imgAttrs correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img width="100" height="100" src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with loading correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="eager" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with lqip correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <div class="bg-cover bg-no-repeat bg-center col-[1] row-[1]" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAMAAAA&quot;);"></div>
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with nonce correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with preload correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with sizes correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55/-/resize/100x" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;

exports[`image > render with ui correctly 1`] = `
"<figure class="relative grid grid-cols-[100%] grid-rows-[100%] overflow-hidden w-full h-full">
  <!--v-if-->
  <picture class="aspect-3/2 col-[1] row-[1]">
    <!--v-if--><img src="https://fluxor.uplora.ru/fgu1yd2ncj05iogcooz31u55" alt="test" loading="lazy" class="w-full h-full block object-cover">
  </picture>
</figure>"
`;
